--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ compileTestKotlin {
 
 repositories {
 	mavenCentral()
+	jcenter()
+	maven { url "https://plugins.gradle.org/m2/" }
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
