--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ buildscript {
 	ext {
 		kotlinVersion = '1.1.61'
 		springBootVersion = '2.0.0.M7'
+		springCloudVersion = 'Finchley.M2'
 	}
 	repositories {
 		mavenCentral()
+		maven { url "https://plugins.gradle.org/m2/"}
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
 	}
@@ -12,6 +14,7 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath "gradle.plugin.io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0.RC4-3"
 	}
 }
 
@@ -52,4 +55,12 @@ dependencies {
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 //	testCompile('org.springframework.security:spring-security-test')
+//	testCompile('com.nhaarman:mockito-kotlin:1.5.0')
+	testCompile('com.nhaarman:mockito-kotlin:1.5.0')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
