--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ repositories {
 
 
 dependencies {
+	compile('org.nield:kotlin-statistics:1.0.0')
 	compile('org.springframework.boot:spring-boot-starter-cache')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 //	compile('org.springframework.boot:spring-boot-starter-security')
