--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
 buildscript {
-	ext {
-		kotlinVersion = '1.1.61'
-		springBootVersion = '2.0.0.M7'
-		springCloudVersion = 'Finchley.M2'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://plugins.gradle.org/m2/"}
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-		classpath("gradle.plugin.io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0.RC4-3")
-		classpath("com.moowork.gradle:gradle-node-plugin:1.1.1")
-	}
+    ext {
+        kotlinVersion = '1.1.61'
+        springBootVersion = '2.0.0.M7'
+        springCloudVersion = 'Finchley.M2'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("gradle.plugin.io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0.RC4-3")
+        classpath("com.moowork.gradle:gradle-node-plugin:1.1.1")
+    }
 }
 
 apply plugin: 'kotlin'
@@ -30,40 +30,48 @@ group = 'com.sunmap'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 compileKotlin {
-	kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "1.8"
 }
 compileTestKotlin {
-	kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "1.8"
 }
 
 repositories {
-	mavenCentral()
-	jcenter()
-	maven { url "https://plugins.gradle.org/m2/" }
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
+    mavenCentral()
+    jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 
 dependencies {
-	compile('org.nield:kotlin-statistics:1.0.0')
-	compile('org.springframework.boot:spring-boot-starter-cache')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile ('com.google.code.gson:gson:2.3.1')
+    compile ('com.android.volley:volley:1.1.0')
+    compile ('com.github.kittinunf.fuel:fuel:1.2.0') //for JVM
+//	compile 'com.github.kittinunf.fuel:fuel-rxjava:2.1.7' //for RxJava support
+//	compile 'com.github.kittinunf.fuel:fuel-gson:2.8.2' //for Gson support
+//	compile 'com.github.kittinunf.fuel:fuel-jackson:2.9.0' //for Jackson support
+//	compile 'com.github.kittinunf.fuel:fuel-moshi:1.5.0' //for Moshi support
+    compile('org.nield:kotlin-statistics:1.0.0')
+    compile('org.springframework.boot:spring-boot-starter-cache')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 //	compile('org.springframework.boot:spring-boot-starter-security')
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
-	compile("org.jetbrains.kotlin:kotlin-reflect")
-	compile("org.springframework.boot:spring-boot-starter-web")
-	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('com.h2database:h2')
-	runtime('org.postgresql:postgresql')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
+    compile("org.jetbrains.kotlin:kotlin-reflect")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    runtime('org.springframework.boot:spring-boot-devtools')
+    runtime('com.h2database:h2')
+    runtime('org.postgresql:postgresql')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 //	testCompile('org.springframework.security:spring-security-test')
 //	testCompile('com.nhaarman:mockito-kotlin:1.5.0')
-	testCompile('com.nhaarman:mockito-kotlin:1.5.0')
+    testCompile('com.nhaarman:mockito-kotlin:1.5.0')
 }
 
 dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
